Fix alignment of top and position of links Add divs for stlying and fixed styling in css so links are where they need to be.

--- a/styles.css
+++ b/styles.css
@@ -8,38 +8,41 @@ body {
 /*Header section with Logo, Links, Hero, image, and button*/
 .align {
     background: #1F2937;
+    padding-bottom: 75px;
+    width: 100%;
 }
 
 .header {
-    width: 75%;
-    margin: auto;
+   margin-left: 300px;
+   margin-right: 300px;
+   
 }
 
 .logo {
     color: #F9FAf8;
     font-size: 24px;
-    padding-right: 450px;
+    padding-right: 600px;
 }
 
 ul {
     color: #E5E7EB;
     font-size: 18px;
     list-style: none;
-    
+    display: flex;
+    margin-right: 0;
+
 }
 
 li {
-    display: inline;
-    padding-right: 70px;
-    
-    border: blue 1px solid;
-    
+    width: 150px;
+    height: fit-content;
+    text-align: end;
 }
 
 h1 {
     color: #F9FAf8;
     font-size: 48px;
-    font-weight: extra-bold;
+    font-weight: bold;
 }
 
 .secondary {
@@ -53,6 +56,8 @@ h1 {
     max-width: 300px;
     max-height: 150px;
     color: #F9FAf8;
+    display: flex;
+    justify-content: flex-end;
 }
 
 button {
